--- a/sys_server_ros/.vscode/settings.json
+++ b/sys_server_ros/.vscode/settings.json
@@ -97,6 +97,7 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.txx": "cpp"
     }
 }
